transmission/transmission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: transmission
  name: transmission
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: transmission
    spec:
      containers:
      - image: carlosedp/transmission
        name: transmission
        ports:
        - containerPort: 9091
        - containerPort: 51413
        - containerPort: 51413
          protocol: UDP
        resources: {}
        volumeMounts:
        - mountPath: /etc/transmission-daemon
          name: config
        - mountPath: /etc/transmission-daemon/settings.json
          name: configfile
          subPath: settings.json
        - mountPath: /volumes/media
          name: transmission-media
      restartPolicy: Always
      volumes:
      - name: configfile
        configMap:
          name: transmission-configmap
      - name: config
        persistentVolumeClaim: 
          claimName: transmission-config
      - name: transmission-media
        nfs:
          server: 192.168.1.56
          path: "/mnt/mediahdd/"
status: {}
