transmission/transmission-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: transmission
  name: transmission
  namespace: mediaserver
spec:
  ports:
  - name: "9091"
    port: 9091
    targetPort: 9091
  - name: "51413"
    port: 51413
    targetPort: 51413
  - name: "51413-udp"
    port: 51413
    protocol: UDP
    targetPort: 51413
  selector:
    io.kompose.service: transmission
  type: NodePort
status:
  loadBalancer: {}
