transmission/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: transmission
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: transmission.internal.carlosedp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: transmission
          servicePort: 9091
